@@ -40,6 +40,8 @@ NEXT (2.6)
 - improvements to pytest's own test-suite leakage detection, courtesy of PRs
   from Marc Abramowitz
 
+- fix issue492: avoid leak in test_writeorg
+
 2.5.2
 -----------------------------------
 
